tests/valid/binary_operators/div_neg.rs
/*
return: -2
*/

main(): i32 {
    return (-12) / 5;
}