tests/invalid/binary_operators/fancy_function_no_semicolon.rs
/*
compilationExitCode: 2
*/

main(): i32 return 2*2